--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,7 +15,10 @@
     <description>backend</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.organization>macben888</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,6 +52,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
