--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -60,6 +60,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.6.RELEASE</version>
                 <configuration>
                     <excludes>
                         <exclude>
