--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "axios": "^0.24.0",
     "bulma": "^0.9.3",
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.7",
