adjust application.properties

--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -3,3 +3,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/pos
 spring.datasource.username=pos
 spring.datasource.password=pos
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
+jwt.secret=secret
+github.client.id=${GITHUB_CLIENT_ID}
+github.client.secret=${GITHUB_CLIENT_SECRET}
