--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/pos
 spring.datasource.username=pos
 spring.datasource.password=pos
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
