--- a/.github/workflows/sonar-frontend.yml
+++ b/.github/workflows/sonar-frontend.yml
@@ -1,7 +1,7 @@
 name: sonar-fronted
 on:
   push:
-    
+  workflow_dispatch: {}
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
