--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,9 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy": "http://localhost:8080/",
+  },
+  "proxy": "http://localhost:8080/",
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2"
   }
-
 }
